2 сервиса работают, нужно настроить bff